--- a/inicio.css
+++ b/inicio.css
@@ -257,7 +257,7 @@
         }
 
         .service-btn {
-            background-color: #fff;
+            background-color:  #28a745;
             color: #333;
             padding: 12px 24px;
             border: 1px solid #ccc;
