--- a/componentes/cobertura.css
+++ b/componentes/cobertura.css
@@ -33,7 +33,7 @@ section {
 }
 /* Barra roja superior fija */
 .top-bar {
-background-color: #cc0000;
+background-color: #b8d100;
 color: white;
 display: flex;
 justify-content: space-between;
@@ -66,7 +66,7 @@ align-items: center;
 gap: 10px;
 }
 .logo-square {
-background-color: #cc0000;
+background-color: #b8d100;
 color: white;
 font-size: 22px;
 font-weight: bold;
@@ -228,7 +228,7 @@ margin-bottom: 1.5rem;
 }
 .footer-logo .logo-square {
 display: inline-block;
-background: #cc0000;
+background: #b8d100;
 color: white;
 font-size: 1.8rem;
 font-weight: bold;
@@ -364,7 +364,7 @@ p {
 /*contenedores cobertura servicios, zona atendemos */
 
 .coverage-header {
-            background-color: #27ae60;
+            background-color: #b8d100;
             color: white;
             text-align: center;
             padding: 60px 20px;
@@ -655,7 +655,7 @@ p {
         }
 
         .no-zone-section {
-            background-color: #27ae60;
+            background-color: #abbc2e;
             color: white;
             text-align: center;
             padding: 40px 20px;
